base/builds/regulus/argocd/projects/rtmp-streaming/manifests/rtmp-nginx/Deployment-converter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter
spec:
  replicas: 4
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: converter
      app.kubernetes.io/name: converter
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: converter
        app.kubernetes.io/name: converter
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - my-app
            topologyKey: "kubernetes.io/hostname"
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
      - name: converter
        image: ghcr.io/kennethwussmann/docker-ffmpeg-converter:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 1000m
            memory: 4Gi
        volumeMounts:
        - mountPath: /videos
          name: videos
      volumes:
      - name: videos
        persistentVolumeClaim:
          claimName: pvc-nas-hls
