base/builds/regulus/argocd/projects/rtmp-streaming/manifests/rtmp-nginx/Deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: nginx
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nginx
        app.kubernetes.io/name: nginx
    spec:
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: nginx
        image: alfg/nginx-rtmp:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 4Gi
          limits:
            cpu: 12000m
            memory: 8Gi
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 1935
          name: rtmp
          protocol: TCP
        - containerPort: 80
          name: hls
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf.template
          name: nginx-config
          subPath: nginx.conf
        - mountPath: /var/www/hls
          name: hls
        - mountPath: /tmp
          name: tmp
          subPath: tmp
        - mountPath: /run
          name: tmp
          subPath: run
        - mountPath: /nas
          name: nas
      volumes:
      - name: nas
        persistentVolumeClaim:
          claimName: pvc-nas-hls
      - name: nginx-config
        configMap:
          name: nginx-conf
      - name: hls
        emptyDir: {}
      - name: tmp
        emptyDir:
          medium: Memory
          sizeLimit: 64Mi
