base/builds/regulus/argocd/projects/rtmp-streaming/manifests/rtmp-nginx/Service-hls.yaml
apiVersion: v1
kind: Service
metadata:
  name: hls
spec:
  ports:
  - name: hls
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/name: nginx
  type: ClusterIP
