base/builds/regulus/argocd/projects/rtmp-streaming/manifests/rtmp-nginx/Service-rtmp-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmp-auth
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: publish-auth
    app.kubernetes.io/name: publish-auth
  type: ClusterIP
