base/builds/regulus/argocd/projects/rtmp-streaming/manifests/rtmp-nginx/Service-rtmp.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmp
spec:
  ports:
  - name: rtmp
    port: 1935
    protocol: TCP
    targetPort: 1935
  selector:
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/name: nginx
  type: ClusterIP
