base/builds/regulus/argocd/projects/rtmp-streaming/manifests/rtmp-nginx/HTTPRoute-nginx-rtmp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-hls
spec:
  hostnames:
  - rtmp.phalnet.com
  - rtmp.apps.phalnet.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: rtmp-relay
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: hls
      port: 1935
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
