base/builds/regulus/argocd/projects/rtmp-streaming/manifests/rtmp-nginx/TCPRoute-nginx-rtmp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: nginx-rtmp
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: rtmp-relay
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: rtmp
      port: 1935
      weight: 1
